--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 526056014097.dkr.ecr.us-east-1.amazonaws.com)
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 526056014097.dkr.ecr.us-east-1.amazonaws.com
       - REPOSITORY_URI=526056014097.dkr.ecr.us-east-1.amazonaws.com/devops-app
       - IMAGE_TAG=latest
 
